app/assets/stylesheets/styles.scss
@import "bootstrap-sprockets";
@import "bootstrap";

html,
body {
  height: 100%;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

nav {
  position: fixed;
  left: 0;
  width: 150px;
  height: 100vh;
  border-right: 1px solid #e3e3e3;
  padding-top: 20px;
  font-size: 18px;
}

.page-header {
  border-bottom: 1px solid #e3e3e3;
}

.content-container {
  height: 100%;
  margin-left: 150px;
  padding-top: 30px;
  padding-bottom: 100px;
  overflow-y: scroll;
}

ul {
  list-style-type: none;
  -webkit-padding-start: 0px;
  padding-start: 0px;
}

.blogs-wrapper {
  li {
    margin: 15px 0;
    a {
      display: inline-block;
      width: 100%;
      span {
        &:last-child {
          float: right;
        }
      }
    }
  }
}

.article {
  text-align: justify;
}

.page-header {
  margin-bottom: 20px;
}

.link-list {
  padding-left: 20px;
}

.link-list li {
  list-style-type: none;
  line-height: 30px;
  margin-left: 0;
}

.gravatar {
  height: 110px;
  display: block;
  margin: 30px auto 50px auto;
  border-radius: 100%;
}


.project-list {
  list-style-type: none;
  margin-top: -5px !important;
  text-align: justify;
  -webkit-margin-before: 0;
  -webkit-padding-start: 0;
  li {
    border-bottom: 1px solid #e3e3e3;
  }
  p {
    margin: 0;
  }
}

.project-list li:nth-child(n + 1) {
  padding: 8px 0;
}

a:hover {
  color: #337ab7;
  text-decoration: none;
  background: #eee;
}

.fixed-column {
  font-size: 1.2em;
  width: 100%;
  margin: 0 auto;
  padding: 0 15px;
  line-height: 1.5em;
  color: #444;
}

.input-group-addon {
  border-radius: 0px;
}

p.comment-author {
  font-size: .8em;
  margin-bottom: 0px;
}

/* Landing Page */
/* ---------------------------------------------*/

.backdrop {
  position: absolute;
  width: 100vw;
  height: 100vh;
  background-image: image-url("woods_bg.jpg");
  background-repeat: no-repeat;
  background-size: cover;
}

.overlay {
  display: block;
  position: absolute;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  background-image: image-url("screen_overlay.png");
  background-repeat: repeat;
  background-color: rgba(0,0,0,0.1);
  height: 100%;
}

.name-stamp {
  position: absolute;
  bottom: 0px;
  right: 25px;
  font-size: 75px;
  color: white;
  font-family: 'Montserrat', sans-serif;
}

.clip-circle {
  height: 100%;
  background: white;
  -webkit-clip-path: circle(19px at left 35px top 35px);
}

.clip-circle.expanded {
  -webkit-clip-path: circle(150% at left 35px top 35px);
  -webkit-transition: all 700ms cubic-bezier(0.715, 0, 0.815, 0.315); /* older webkit */
  -webkit-transition: all 700ms cubic-bezier(0.715, -0.045, 0.815, 0.315);
     -moz-transition: all 700ms cubic-bezier(0.715, -0.045, 0.815, 0.315);
       -o-transition: all 700ms cubic-bezier(0.715, -0.045, 0.815, 0.315);
          transition: all 700ms cubic-bezier(0.715, -0.045, 0.815, 0.315); /* custom */

  -webkit-transition-timing-function: cubic-bezier(0.715, 0, 0.815, 0.315); /* older webkit */
  -webkit-transition-timing-function: cubic-bezier(0.715, -0.045, 0.815, 0.315);
     -moz-transition-timing-function: cubic-bezier(0.715, -0.045, 0.815, 0.315);
       -o-transition-timing-function: cubic-bezier(0.715, -0.045, 0.815, 0.315);
          transition-timing-function: cubic-bezier(0.715, -0.045, 0.815, 0.315); /* custom */
}

.glyphicon-menu-hamburger {
  position: absolute;
  top: 15px;
  left: 15px;
  padding: 10px;
  font-size: 20px;
  color: #555;
  z-index: 2;
}

.glyphicon-menu-hamburger:hover {
  cursor: pointer;
  color: #333;
}

.landing-wrapper {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
}

.x-small {
  font-size: .7em;
}

a.buttonize {
  border: 1px solid #337ab7;
  padding: 2px 20px;
  margin: 10px;
  box-sizing: border-box;
  display: inline-block;
  border-radius: 20px;
}

footer {
  position: fixed;
  bottom: 0; left: 150px; right: 0;
  background: white;
  border-top: 1px solid #e3e3e3;
  height: 50px;
  span {
    line-height: 50px;
  }
  .footer-links {
    margin-right: 15px;
  }
}

a.add {
  position: relative;
  top: -30px;
  right: 30px;
  height: 55px;
  width: 55px;
  border-radius: 50%;
  background: white;
  border: 1px solid #ccc;
  box-shadow: 0px 2px 8px #ccc;
  span {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    height: 20px;
    width: 20px;
    font-size: 20px;
  }
}

input[type="submit"] {
  font-size: 1em;
  padding: 2px 20px;
  border-radius: 0px;
}

.large {
    font-size: 2em;
}

.project-list {
  > li {
    position: relative;
    .overlay {
      display: none;
    }
    .edit-delete-wrapper {
      visibility: hidden;
    }
    &:hover {
      .edit-delete-wrapper {
        visibility: visible;
      }
    }
  }
}

.edit-delete-wrapper {
  a {
    opacity: initial;
    &:hover {
      background: none;
    }
  }
  .edit {
    color: #84afd3;
    &:hover {
      color: #337ab7;
    }
  }
  .delete {
    color: #cb8e8d;
    &:hover {
      color: #a94442;
    }
  }
  .go-to {
    color: #8aac8a;
    &:hover {
      color: #3c763d;
    }
  }
}

.flash {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 30px;
  margin: 0;
  line-height: 30px;
  text-align: center;
  font-size: 1.3em;
  color: white;
  padding: 0;
  border: none;
  border-radius: 0;
  margin-bottom: 0;
  z-index: 9999;
  &.notice {
    background: #08c;
  }
  &.alert {
    background: #ff4c4c;
  }
}

.edit-logout-links {
  position: absolute;
  bottom: 5px;
  left: 9px;
  font-size: .8em;
}

.login-link {
  display: inline-block;
  position: absolute;
  top: 0; right: 0;
  height: 20px;
  width: 20px;
  &:hover {
    background: initial;
    cursor: default;
  }
}

.add-after-recaptcha {
  margin-top: 13px;
}

.form-control {
  border-radius: 0px;
}

.blog-comments-wrapper {
  margin-top: 20px;
  li {
    padding: 5px 0;
    border-top: 1px solid #e3e3e3;
  }
}

.post-wrapper {
  border-bottom: 3px double #e3e3e3;
  padding-bottom: 20px;
  margin-bottom: 30px;
}

span.linkify {
  color: #337ab7;
  &:hover {
    text-decoration: underline;
    cursor: pointer;
  }
}

.line-through {
  text-decoration: line-through;
}

.github-link {
  margin-left: 10px;
}

textarea {
  resize: none;
}

.top-stripe {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  min-height: 5px;
  background-color: #08c;
  z-index: 9999;
}

/* Scroll Bar Styling
/* ---------------------------------------------*/

::-webkit-scrollbar {
    height: 12px;
    width: 6px;
    background: #000;
}

::-webkit-scrollbar-thumb {
    background: #08c;
}

::-webkit-scrollbar-corner {
    background: #000;
}

::-webkit-scrollbar-track-piece {
	background: #ddd;
}

/* Media Queries */
/* ---------------------------------------------*/

/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
  .fixed-column {
    width: 600px;
  }
}

/* Medium devices (desktops, 992px and up) */
@media (min-width: 992px) {
  footer {
    left: initial;
    border-top: 1px solid transparent;
  }
}

/* Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {

}

